fix spacing in comms + design tab

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -117,7 +117,8 @@ h2 {
   height: 34px;
   width: 8px;
   z-index: -3;
-  grid-template-columns: 200px auto auto;
+  // grid-gap: 20px;
+  grid-template-columns: 200px auto 400px;
   // grid-template-rows: auto;
   // float:left;
 }
@@ -156,6 +157,7 @@ h2 {
 .graphics-column-two {
   grid-column: 2 / 2;
   min-width: 500px;
+  padding-right: 20px;
 }
 
 .graphics-column-three {
@@ -165,8 +167,8 @@ h2 {
   grid-template-rows: auto auto auto;
   grid-gap: 10px;
   grid-row-gap: 10px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 0;
+  padding-right: 20px;
   max-height: 400px;
   min-width: 0;
 }
@@ -788,7 +790,7 @@ a:hover {
 
     .prof-box-devlast,
     .prof-box2 {
-      width: 70vw;
+      width: 79vw;
       margin-right: 50px;
     }
 
@@ -840,7 +842,7 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 576px) {
   * {
     min-width: 0;
   }
